Fixed, section not covering all hscreen height

--- a/src/styles/gallery.css
+++ b/src/styles/gallery.css
@@ -1,3 +1,7 @@
+.section-content#gallery{
+  flex-grow: 1;
+}
+
 .grid-container {
   grid-template-columns: 1fr 1fr 1fr;
   margin: 70px 0px;
